--- a/docker-compose.monitoring.yml
+++ b/docker-compose.monitoring.yml
@@ -17,6 +17,7 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/usr/share/prometheus/console_libraries'
       - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--web.enable-lifecycle'
     networks:
       - monitoring
     restart: always
@@ -33,8 +34,11 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
+      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/notification-system.json
     networks:
       - monitoring
+    depends_on:
+      - prometheus
     restart: always
 
   otel-collector:
@@ -45,9 +49,11 @@ services:
     ports:
       - "4317:4317"   # OTLP gRPC
       - "4318:4318"   # OTLP HTTP
-      - "8888:8888"   # Metrics
+      - "8889:8889"   # Prometheus metrics exporter
     networks:
       - monitoring
+    depends_on:
+      - prometheus
     restart: always
 
 volumes:
