--- a/monitoring/otel-collector-config.yaml
+++ b/monitoring/otel-collector-config.yaml
@@ -2,7 +2,9 @@ receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: 0.0.0.0:4317
       http:
+        endpoint: 0.0.0.0:4318
 
 processors:
   batch:
@@ -12,7 +14,9 @@ processors:
 exporters:
   prometheus:
     endpoint: "0.0.0.0:8889"
+    namespace: "notification_system"
   logging:
+    verbosity: detailed
     loglevel: debug
 
 service:
