--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,8 +5,8 @@ global:
 scrape_configs:
   - job_name: 'notification-system'
     static_configs:
-      - targets: ['host.docker.internal:8001']
+      - targets: ['notification-system:8000']
 
   - job_name: 'otel-collector'
     static_configs:
-      - targets: ['otel-collector:8888'] 
+      - targets: ['otel-collector:8889'] 
