--- a/monitoring/otel-collector-config.yaml
+++ b/monitoring/otel-collector-config.yaml
@@ -15,17 +15,16 @@ exporters:
   prometheus:
     endpoint: "0.0.0.0:8889"
     namespace: "notification_system"
-  logging:
+  debug:
     verbosity: detailed
-    loglevel: debug
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: [debug]
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [prometheus, logging] 
+      exporters: [prometheus, debug] 
