--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,7 +5,7 @@ global:
 scrape_configs:
   - job_name: 'notification-system'
     static_configs:
-      - targets: ['notification-system:8001']
+      - targets: ['host.docker.internal:8001']
 
   - job_name: 'otel-collector'
     static_configs:
